# cppgame

./: CMakeLists.txt  README  README.md
include/: common.hpp  enemy.hpp  player.hpp
source/: common.cpp  main.cpp  player.cpp
